--- a/.env
+++ b/.env
@@ -26,3 +26,9 @@ APP_SECRET=e7cebf8486adfb6fddd816226c6fa1e7
  DATABASE_URL="mysql://root:@127.0.0.1:3306/bileMoApi?serverVersion=5.7"
 #DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
 ###< doctrine/doctrine-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=57f4ebcf6c06a4513df742138e74eb1c
+###< lexik/jwt-authentication-bundle ###
