--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,10 @@
         "doctrine/orm": "^2.8",
         "fzaninotto/faker": "^1.9",
         "lexik/jwt-authentication-bundle": "^2.11",
+        "nelmio/api-doc-bundle": "^4.3",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^6.1",
+        "symfony/cache": "5.2.*",
         "symfony/console": "5.2.*",
         "symfony/dotenv": "5.2.*",
         "symfony/flex": "^1.3.1",
