--- a/config/packages/routing.yaml
+++ b/config/packages/routing.yaml
@@ -2,6 +2,11 @@ framework:
     router:
         utf8: true
 
+
+# NelmioApiDocBundle:
+#     resource: "@NelmioApiDocBundle/Resources/config/routing.yml"
+#     prefix:   /api/doc
+    
         # Configure how to generate URLs in non-HTTP contexts, such as CLI commands.
         # See https://symfony.com/doc/current/routing.html#generating-urls-in-commands
         #default_uri: http://localhost
